<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="#FFFFFF"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/search_bar"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/appImage" />

            <TextView
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/search_apps"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_voice"
                android:contentDescription="@string/voiceIcon" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_notification"
            android:contentDescription="@string/notificationIcon" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="39dp"
            android:src="@drawable/ic_avatar"
            android:contentDescription="@string/avatarImage" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>